--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,15 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
-        <url>https://svn.apache.org/viewvc/maven</url>
+        <url>https://github.com/Domktorymysli/grenton-encoder.git</url>
+        <connection>scm:git:git@github.com:Domktorymysli/grenton-encoder.git</connection>
+        <developerConnection>scm:git:git@github.com:Domktorymysli/grenton-encoder.git</developerConnection>
     </scm>
 
     <properties>
