--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.github.domktorymysli.grenton.cipher</groupId>
     <artifactId>grenton-cipher</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>Domktorymysli Grenton Cipher</name>
     <description>Grenton cipher</description>
     <url>https://github.com/Domktorymysli</url>
@@ -20,7 +20,7 @@
         <url>https://github.com/Domktorymysli/grenton-encoder.git</url>
         <connection>scm:git:git@github.com:Domktorymysli/grenton-encoder.git</connection>
         <developerConnection>scm:git:git@github.com:Domktorymysli/grenton-encoder.git</developerConnection>
-        <tag>grenton-cipher-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
